--- a/FoodDeliveryApp/FoodDelivery.Web/Views/FoodItems/Delete.cshtml
+++ b/FoodDeliveryApp/FoodDelivery.Web/Views/FoodItems/Delete.cshtml
@@ -4,49 +4,43 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<div class="hero-section d-flex align-items-center justify-content-center text-white text-center" style="height: 20vh;">
+    <div>
+        <h1 class="display-5 fw-bold">Delete Food Item</h1>
+        <p class="lead">Are you sure you want to delete this food item?</p>
+    </div>
+</div>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>FoodItem</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Price)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Image)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Image)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Category)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Category)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="hidden" asp-for="RestaurantId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+<div class="container d-flex justify-content-center align-items-center" style="min-height: 80vh; margin-top: -5vh;">
+    <div class="card shadow-lg rounded p-4" style="max-width: 600px; width: 100%; background: rgba(255, 255, 255, 0.95);">
+        <div class="text-center mb-3">
+            <img src="@Model.Image" alt="Food Image" class="img-fluid rounded" style="max-height: 300px; object-fit: cover;" />
+        </div>
+        <div class="card-body">
+            <dl class="row">
+                <dt class="col-sm-4 fw-bold">Name:</dt>
+                <dd class="col-sm-8">@Model.Name</dd>
+
+                <dt class="col-sm-4 fw-bold">Price:</dt>
+                <dd class="col-sm-8">$@Model.Price</dd>
+
+                <dt class="col-sm-4 fw-bold">Description:</dt>
+                <dd class="col-sm-8">@Model.Description</dd>
+
+                <dt class="col-sm-4 fw-bold">Category:</dt>
+                <dd class="col-sm-8">@Model.Category</dd>
+            </dl>
+        </div>
+        <form asp-action="Delete" class="card-footer text-center d-flex justify-content-around">
+            <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="RestaurantId" />
+
+            <button type="submit" class="btn btn-danger d-flex align-items-center">
+                <i class="bi bi-trash3 me-2"></i> Delete
+            </button>
+            <a asp-action="Index" class="btn btn-outline-secondary d-flex align-items-center">
+                <i class="bi bi-arrow-left me-2"></i> Back to List
+            </a>
+        </form>
+    </div>
 </div>
