--- a/FoodDeliveryApp/FoodDelivery.Web/Views/FoodItems/Details.cshtml
+++ b/FoodDeliveryApp/FoodDelivery.Web/Views/FoodItems/Details.cshtml
@@ -4,51 +4,42 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
-
-<div>
-    <h4>FoodItem</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Price)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Image)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Image)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Category)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Category)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TimeToPrepareMinutes)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.TimeToPrepareMinutes)
-        </dd>
-    </dl>
+<div class="hero-section d-flex align-items-center justify-content-center text-white text-center" style="height: 20vh;">
+    <div>
+        <h1 class="display-5 fw-bold">Food Item Details</h1>
+        <p class="lead">View details of the selected food item below.</p>
+    </div>
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+
+<div class="container d-flex justify-content-center align-items-center" style="min-height: 80vh; margin-top: -5vh;">
+    <div class="card shadow-lg rounded p-4" style="max-width: 600px; width: 100%; background: rgba(255, 255, 255, 0.95);">
+        <div class="text-center mb-3">
+            <img src="@Model.Image" alt="Food Image" class="img-fluid rounded" style="max-height: 300px; object-fit: cover;" />
+        </div>
+        <div class="card-body">
+            <h4 class="fw-bold mb-4">@Model.Name</h4>
+
+            <dl class="row">
+                <dt class="col-sm-4 fw-bold">Price:</dt>
+                <dd class="col-sm-8">$@Model.Price</dd>
+
+                <dt class="col-sm-4 fw-bold">Description:</dt>
+                <dd class="col-sm-8">@Model.Description</dd>
+
+                <dt class="col-sm-4 fw-bold">Category:</dt>
+                <dd class="col-sm-8">@Model.Category</dd>
+
+                <dt class="col-sm-4 fw-bold">Time to Prepare:</dt>
+                <dd class="col-sm-8">@Model.TimeToPrepareMinutes minutes</dd>
+            </dl>
+        </div>
+        <div class="card-footer text-center d-flex justify-content-around">
+            <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn btn-info">
+                <i class="bi bi-pencil"></i> Edit
+            </a>
+            <a asp-action="Index" class="btn btn-outline-secondary">
+                <i class="bi bi-arrow-left"></i> Back to List
+            </a>
+        </div>
+    </div>
 </div>
